# template-rust-dioxus-surrealdb-ractor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: ci.yml
