[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/db",
    "packages/actors",
    "packages/ui",
    "packages/web",
    "packages/desktop",
    "packages/mobile",
    "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tracing = "0.1"

# Ractor - use native async fn in traits (no async-trait feature)
ractor = { version = "0.15", default-features = false }

# SurrealDB - multi-model database
surrealdb = { version = "2.6", default-features = false }

# Workspace packages
queue_core = { path = "packages/core" }
db = { path = "packages/db" }
actors = { path = "packages/actors" }
ui = { path = "packages/ui" }
api = { path = "packages/api" }
